[project]
name = "api-test-gen"
version = "0.1.0"
description = "API documentation → test cases → pytest+requests automation code"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "litellm>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
api-test-gen = "api_test_gen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_test_gen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
